# BusPlot

./: .gitignore  CMakeLists.txt  README.md
asset/: default_layout.ini
imgui/backends/: imgui_impl_glfw.cpp
imgui/core/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h
shaders/: fragment.glsl  text_vertex.glsl  vertex.glsl
src/: axis.cpp  axis.hpp  chart.cpp  chart.hpp  crc.cpp  crc.hpp  element.cpp  element.hpp  gl.hpp  gui.cpp  gui.hpp  main.cpp  rpc_protocol.hpp  rpc_test.cpp  serial.hpp  serial_rpc.cpp  serial_rpc.hpp  series.cpp  series.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp
test/: rpc_test.cpp  simulator.cpp
